<resources>
    <string name="app_name">To Do</string>
    <string name="task_name_label">Name</string>
    <string name="task_name_hint">Enter task name</string>
    <string name="task_details_label">Details</string>
    <string name="task_done_label">Done</string>
    <string name="radio_group_label">Choose a priority:</string>
    <string name="create_task_button">Create a task</string>
    <string name="task_description_label">Short description:</string>
    <string name="high_priority"> high</string>
    <string name="medium_priority">medium</string>
    <string name="low_priority">low</string>
    <string name="task_date_label">Enter date</string>
    <string name="task_time_label">Enter time</string>
    <string name="create_task_name_label">Enter name</string>
    <string name="create_task_label">Create Task</string>
    <string name="add_task_option">Add task</string>
    <string name="task_created">Task was created</string>
    <string name="category_created">Category was created</string>
    <string name="empty_task_cancelled">The fields were empty: name, time, date should not be empty</string>
    <string name="empty_category_cancelled">The fields were empty: name, short description, should not be empty</string>
    <string name="search_bar">Search</string>
    <string name="confirm">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="delete_task_confirmation">Are you sure you want to delete this task?</string>
    <string name="delete_task_title">Delete</string>
    <string name="switch_to_categories">Show Categories</string>
    <string name="clear_search">Clear</string>
    <string name="edit_task_title">Edit</string>
    <string name="category_name_hint">Enter name</string>
    <string name="category_short_description_hint">Enter short description</string>
    <string name="create_category_button">Create Category</string>
    <string name="edit_category_button">Edit Category</string>
    <string name="task_edit_was_successful">Successfully updated task</string>
    <string name="category_edit_was_successful">Successfully updated category</string>
    <string name="task_edit_was_unsuccessful">Task was not updated</string>
    <string name="category_edit_was_unsuccessful">Category was not updated</string>
    <string name="edit_task_header">Edit Task</string>
    <string name="delete_category_confirmation">Are you sure you want to delete this category?</string>
    <string name="delete_category_title">Delete Category</string>
    <string name="switch_to_tasks">Show tasks</string>
    <string name="add_category">Add category</string>
    <string name="category_choice_field_hint">Choose Category</string>
    <string name="motivated_message">It is possible that today you will complete all of the tasks!</string>
    <string name="unmotivated_message">You need to motivate yourself today a little bit more than usually!</string>
    <string name="lightly_motivated_message">Stay motivated, never give up!</string>
    <string name="notification_title">Task deadline is pretty close</string>
    <string name="notification_channel_name">Tasks</string>
    <string name="notification_description">This is channel for managing tasks</string>
    <string name="toggle_switch_title">Remind me</string>
    <string name="sort_date_title">Sort by date</string>
    <string name="sort_priority_title">Sort by priority</string>
    <string name="show_missed_tasks">Missed tasks view</string>
    <string name="show_all_tasks">Normal tasks view</string>
    <string name="take_picture_title">Take a picture</string>
    <string name="load_picture_title">Load a picture</string>
    <string name="unable_to_load_picture">You cannot load a picture</string>
    <string name="unable_to_capture_picture">You cannot take a picture</string>
    <string name="task_details_category_label">Task Category: %s</string>
    <string name="no_tasks_message">Create something to use our app :D</string>
    <string name="category_list_cat_name">Name: %s</string>
    <string name="category_list_cat_description">Description: %s</string>
    <string name="default_category_name">Default category</string>
    <string name="default_category_description">This is default category</string>
    <string name="message_default_cateogry">You cannot delete default category</string>
    <string name="message_temperature_warm">Your motivation may raise up! :D</string>
    <string name="message_temperature_rest">Today you may feel lazy :(</string>
</resources>