<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CreateTaskActivity"
    android:gravity="top">

    <TextView
        android:id="@+id/create_task_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/create_task_label"
        style= "@style/InformativeTextView"/>

    <EditText
        android:id="@+id/task_name_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/create_task_name_label" />

    <EditText
        android:id="@+id/task_date_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint= "@string/task_date_label"/>

    <EditText
        android:id="@+id/task_time_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint= "@string/task_time_label"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/task_priority_group">

        <TextView
            android:id="@+id/radio_group_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_group_label"
            android:layout_gravity="left"
            android:textStyle="bold"/>

        <RadioButton
            android:id="@+id/high_priority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/high_priority" />

        <RadioButton
            android:id="@+id/medium_priority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/medium_priority" />

        <RadioButton
            android:id="@+id/low_priority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/low_priority" />

    </RadioGroup>

    <TextView
        android:id="@+id/task_description_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_description_label"
        android:layout_gravity="left"
        android:textStyle="bold"
        android:paddingTop="12dp"/>

    <EditText
        android:id="@+id/task_description_box"
        android:layout_width="match_parent"
        android:layout_height="93dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine" />

    <Spinner
        android:id="@+id/category_choice_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
    android:id="@+id/create_task_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/create_task_button"
    style="@style/ButtonsStyle"/>
</LinearLayout>