<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        style="@style/InformativeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_details_label" />

    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:countDown="true"
        style="@style/ChronometerStyle"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/lineHeight"
        android:background="@color/colorText"/>

    <EditText
        android:id="@+id/task_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/task_name_label"
        style="@style/DateTextViewStyle"/>

    <TextView
        android:id="@+id/task_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/DateTextViewStyle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Switch
            android:id="@+id/notifications_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toggle_switch_title" />

        <CheckBox
            android:id="@+id/task_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_done_label" />


    </LinearLayout>
</LinearLayout>
